z-index fix

--- a/www-develop/css/style.css
+++ b/www-develop/css/style.css
@@ -22,7 +22,6 @@ body {
 
 .absolute-slider {
     position: fixed;
-    z-index: -1;
     width: 100%;
     height: 100%;
     left: 0;
